--- a/Gestion_Centre_Formations/Views/web.config
+++ b/Gestion_Centre_Formations/Views/web.config
@@ -42,11 +42,11 @@
         <add assembly="System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-	 <!--<customErrors mode="On" defaultRedirect="~/Error/Index">
+	 <customErrors mode="On" defaultRedirect="~/Error/Index">
 		 <error statusCode="401" redirect="~/Error/Error401" />
 		  <error statusCode="404" redirect="~/Error/Error404" />
 		  <error statusCode="500" redirect="~/Error/Error500" />
-		  </customErrors>-->
-	  <customErrors mode="Off" />
+		  </customErrors>
+	  <!--<customErrors mode="Off" />-->
   </system.web>
 </configuration>
