--- a/Gestion_Centre_Formations/Web.config
+++ b/Gestion_Centre_Formations/Web.config
@@ -20,12 +20,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  <!-- <customErrors mode="On" defaultRedirect="~/Error/Index">
+	  <customErrors mode="On" defaultRedirect="~/Error/Index">
 		  <error statusCode="401" redirect="~/Error/Error401" />
 		  <error statusCode="404" redirect="~/Error/Error404" />
 		  <error statusCode="500" redirect="~/Error/Error500" />
-		  </customErrors>-->
-	 <customErrors mode="Off" />
+		  </customErrors>
+	 <!--<customErrors mode="Off" />-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -68,6 +68,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.5" newVersion="8.0.0.5" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
