--- a/Gestion_Centre_Formations/packages.config
+++ b/Gestion_Centre_Formations/packages.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="5.3.3" targetFramework="net472" />
-  <package id="DinkToPdf" version="1.0.8" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net472" />
-  <package id="HtmlRenderer.PdfSharp" version="1.5.0.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
@@ -20,8 +19,9 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net472" />
   <package id="PDFsharp" version="6.1.1" targetFramework="net472" />
-  <package id="PuppeteerSharp" version="20.0.5" targetFramework="net472" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
